--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "binary-pack": "^1.0.2",
     "express": "4.14.0",
     "primus": "6.0.8",
+    "primus-msgpack": "^1.0.2",
     "uws": "^0.12.0"
   }
 }
